--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,11 @@ body {
     text-align: center;
     background-color: white;
     padding: 20px;
+	display:flex;
+	flex-direction:column;
+	align-items:center;
+	 justify-content: center;
+	gap:10px;
     border-radius: 10px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
 }
@@ -23,19 +28,20 @@ body {
 }
 
 #verification_subtext {
-    font-size: 14px;
+    font-size: 12px;
     color: #888;
     margin-bottom: 20px;
 }
 
 .code-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+	gap:20px
 }
 
 .code {
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 60px;
     font-size: 20px;
     text-align: center;
     border: 2px solid #ddd;
